--- a/app/index/view/index/index.html
+++ b/app/index/view/index/index.html
@@ -1,13 +1,34 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>无标题文档</title>
-<link rel="stylesheet" href="/public/static/css/index.css" type="text/css">
+	<meta charset="utf-8">
+	<title>无标题文档</title>
+	<link rel="stylesheet" href="static/css/index.css" type="text/css">
+
 </head>
 
 <body>
-	<div>__STATIC__</div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-	<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+	<div class="top">
+		<div class="left">
+			<ul>
+				<li>1</li>
+				<li>2</li>
+			</ul>
+			
+		</div>
+		<div class=right>
+			<ul>
+				<li>3</li>
+				<li>4</li>
+				<li>5</li>
+				<li>6</li>
+				<li>7</li>
+			</ul>
+		</div>
+
+	</div>
+	<div class="content">
+	
+	</div>
 </body>
 </html>
