--- a/app/index/view/index/index.html
+++ b/app/index/view/index/index.html
@@ -6,26 +6,35 @@
 	<link rel="stylesheet" href="static/css/index.css" type="text/css">
 
 </head>
-
+	
 <body>
-	<div class="top">
+	<div class="top1">
 		<div class="left">
 			<ul>
-				<li>1</li>
-				<li>2</li>
+				<li>位置</li>
+				<li>上海</li>
 			</ul>
 			
 		</div>
-		<div class=right>
+		<div class="right">
 			<ul>
-				<li>3</li>
-				<li>4</li>
-				<li>5</li>
-				<li>6</li>
-				<li>7</li>
+				<li>登陆</li>
+				<li>注册</li>
+				<li>我的订单</li>
+				<li>我的京东</li>
+				<li>京东会员</li>
+				<li>企业采购</li>
+				<li>客户服务</li>
+				<li>网站导航</li>
 			</ul>
 		</div>
 
+	</div>
+	<div class="top2">
+		<div ></div>
+		<div></div>
+		<div></div>
+	
 	</div>
 	<div class="content">
 	
