--- a/app/index/view/index/index.html
+++ b/app/index/view/index/index.html
@@ -3,41 +3,70 @@
 <head>
 	<meta charset="utf-8">
 	<title>无标题文档</title>
-	<link rel="stylesheet" href="static/css/index.css" type="text/css">
+	<link rel="stylesheet" href="../../static/css/index.css" type="text/css">
 
 </head>
 	
 <body>
-	<div class="top1">
-		<div class="left">
-			<ul>
-				<li>位置</li>
-				<li>上海</li>
-			</ul>
-			
+	<div class="header">	
+		<div class="header-style">
+			<div class="container">
+				<div class="header-left">
+					<ul>
+						<li>小米商城</li>
+						<li>MIUI</li>
+						<li>IoT</li>
+						<li>云服务</li>
+						<li>金融</li>
+						<li>有品</li>	
+						<li>小爱开放平台</li>				
+						<li>企业团购</li>
+						<li>资质证照</li>
+						<li>协议规则</li>
+						<li>下载app</li>
+						<li>Select Location</li>
+					</ul>
+				</div>	
+				<div class="header-right">购物车(0)</div>
+				<div class="header-center">
+					<ul>
+						<li>登陆</li>
+						<li>注册</li>
+						<li>消息通知</li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div class="right">
-			<ul>
-				<li>登陆</li>
-				<li>注册</li>
-				<li>我的订单</li>
-				<li>我的京东</li>
-				<li>京东会员</li>
-				<li>企业采购</li>
-				<li>客户服务</li>
-				<li>网站导航</li>
-			</ul>
-		</div>
-
-	</div>
-	<div class="top2">
-		<div></div>
-		<div></div>
-		<div></div>
-	
 	</div>
 	<div class="content">
-	
+		<div class="nav">
+			<div class="logo"></div>
+			<div class="nav-list"></div>
+			<div class="search"></div>
+		</div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
 	</div>
+	<div></div>
 </body>
 </html>
